# dkn-compute-launcher

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  install-new.sh  install.ps1  install.sh  main.go  start.sh
.github/: build_startgo.yml
.github/workflows/: build-test.yml  build-tmp.yml  build_and_publish.yml  release.yml  tests.yml
kasim-changes/: Dockerfile  run_processes.sh
src/: env.rs  main.rs
src/commands/: bench.rs  bootstrap.rs  check.rs  compute.rs  editor.rs  info.rs  measure.rs  mod.rs  points.rs  referrals.rs  settings.rs  setup.rs  specific.rs  start.rs  uninstall.rs  update.rs  version.rs
src/settings/: apikey.rs  loglevel.rs  mod.rs  models.rs  ollama.rs  port.rs  wallet.rs
src/settings/models/: edit.rs  list.rs  measure.rs  mod.rs  remove.rs
src/utils/: crypto.rs  env.rs  fdlimit.rs  mod.rs  ollama.rs  process.rs  referrals.rs  releases.rs  rlimit.rs  selectable.rs  signal.rs  updates.rs
utils/: cmd.go  compute.go  docker.go  env.go  gemini.go  helper.go  ollama.go  openai.go  openrouter.go  process_unix.go  process_windows.go
