[package]
name = "dkn-compute-launcher"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]

[dependencies]
# runtime & process
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "time",
] }
which = "6.0.3"
self_update = "0.42.0"

# CLI
clap = { version = "4.5.27", features = ["derive", "env"] }
inquire = { version = "0.7.5", features = ["editor"] }

# utilities
dotenvy = "0.15.7"
hex = "0.4.3"
enum-iterator = "2.1.0"

# logging & errors
env_logger = "0.11.3"
log = "0.4.21"
eyre = "0.6.12"

dkn-workflows = { git = "https://github.com/firstbatchxyz/dkn-compute-node" }
