[package]
name = "dkn-compute-launcher"
edition = "2021"
version = "0.1.1"
license = "Apache-2.0"
readme = "README.md"
description = "Dria Compute Node Launcher"
authors = ["Erhan Tezcan <erhan@firstbatch.xyz>"]
rust-version = "1.78.0"

[dependencies]
# runtime & process
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
  "time",
] }
self_update = { version = "0.42.0", features = [
  "rustls",
], default-features = false }
futures = "0.3.31"
which = "7.0.2"

# CLI
clap = { version = "4.5.27", features = [
  "derive",
  "string", # this is required for Clap to have default non-static values, e.g. .env
] }
inquire = { version = "0.7.5", features = ["editor"] }

# utilities
dotenvy = "0.15.7"
hex = "0.4.3"
enum-iterator = "2.1.0"

# logging & errors
env_logger = "0.11.3"
log = "0.4.21"
eyre = "0.6.12"
indicatif = "0.17.11"

ollama-rs = { version = "0.2.5", features = ["rustls", "stream"] }
dkn-workflows = { git = "https://github.com/firstbatchxyz/dkn-compute-node" }
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
rlimit = "0.10.2"
colored = "2.2.0"
homedir = "0.3.4"

# vendor OpenSSL so that its easier to build cross-platform packages
[dependencies.openssl]
version = "*"
features = ["vendored"]

# clippy overrides
[lints.clippy]
nonminimal_bool = "allow"
